overflow issue still happening

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -5,7 +5,9 @@
 }
 
 body {
+  overflow-x: hidden;
   width: 100%;
+  background-color: red;
 }
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 
